2011-04-18  Andreas Kupries  <andreask@activestate.com>

	* ctext.tcl: Reformatted for standard indentation.

2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2008-08-19  George Peter Staplin  <georgeps@users.sourceforge.net>

	ctext.tcl: I fixed bug 2059415 by saving the id from [after idle].
	On widget destruction the ids are catch {after cancel}.

	I also fixed an old bug that occured in the tests, with backspace,
	and the previously highlighted text not being dehighlighted.

	pkgIndex.tcl: I bumped the revision to 3.2

	ctext.man: Updated to revision 3.2

2007-05-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* ctext.tcl (ctext::linemapUpdate): make the ctext linemap not
	resize - it maintains the widest size necessary

2006-10-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	ctext.man updated - -linemap clarified, example reformatted (smaller
	width, for better display and printing), added configure subcommand

2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	*

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	*

2005-04-07  Andreas Kupries <andreask@activestate.com>

	* ctext.man: Fixed formatting bugs in ctext.man

3.1.6 - Wed Apr  6 04:41:13 GMT 2005

	ctext.man was kindly contributed by
	Michael Schlenker.  Thanks Michael :)


3.1.5 - Mon Mar 21 11:23:09 GMT 2005

	ctext_tcl.tcl was contributed to ctext by
	Uwe Koloska.  It provides easy syntax
	highlighting for Tcl scripts.  He has apparently
	added ctext to Nagelfar.
	http://spjuth.pointclark.net/Nagelfar.html

3.1.4 - Thu Aug 12 03:10:06 UTC 2004

	ctext.tcl was changed to fix a bug that
	occured when the geometry management of the
	ctext widget was such that it wouldn't enlarge
	when [$inst configure -linemap 1] was invoked.
